FAC-587 Upgrade jdk to 21