@@ -104,7 +104,7 @@ class GetEvidenceServiceTest {
         var assessmentResult = AssessmentResultMother.validResultWithJustAnId();
         Question question = QuestionMother.withOptions();
         User user = new User(evidence.getCreatedById(), "displayName");
-        Answer answer = AnswerMother.answerWithNullNotApplicable(question.getOptions().get(0));
+        Answer answer = AnswerMother.answerWithNullNotApplicable(question.getOptions().getFirst());
 
         when(loadEvidencePort.loadNotDeletedEvidence(id)).thenReturn(evidence);
         when(assessmentAccessChecker.isAuthorized(evidence.getAssessmentId(), currentUserId, VIEW_EVIDENCE)).thenReturn(true);
